added a template for us to get started with

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Main Page</title>
+	<title>About Us</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link href="./css/carousel.css" rel="stylesheet">
@@ -32,9 +32,26 @@
 			</div>
 		</nav>
 	</header>
-	<h1 class="mainHeading">Main Page</h1>
+	<h1 class="mainHeading">About us</h1>
 	<div id="aboutUs">
-		<h3>This looks like a great way to start the midterm project</h3>
+		<h3>COM S - 319 Construction of User Interfaces</h3>
+		<p>Instructor: Abraham Aldaco</p>
+		<p>Date : October 9, 2023 </p>
+
+		<p>
+			Developers: <br>
+			William Silich<br>
+			Email : wasilich@iastate.edu<br><br>
+			Jake Sweeney<br>
+			Email : jsweenz@iastate.edu<br>
+		</p>
+		
+
+		
+	</div>
+
+
+
 	<hr>
 	<footer class="container">
 		<p style="text-align: center;">&copy; 2023 Team 27</p>
