add temp reading

--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Main Page</title>
+	<title>Dashboard</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link href="./css/carousel.css" rel="stylesheet">
+	<link href="./css/index.css" rel="stylesheet">
+
+	<script src="./index.js "></script>
 </head>
 
 <body>
 	<header data-bs-theme="dark">
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="./index.html">Main Page</a>
+				<a class="navbar-brand" href="./index.html">Dashboard</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -32,9 +35,31 @@
 			</div>
 		</nav>
 	</header>
-	<h1 class="mainHeading">Main Page</h1>
-	<div id="aboutUs">
-		<h3>This looks like a great way to start the midterm project</h3>
+	<h1 class="mainHeading">Current Status</h1>
+	<div>
+		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
+		<p id="lastRead">Last recorded temperature taken at: </p>
+
+		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+			<div class="col">
+				<div id="card1" class="card collapse show shadow-sm">
+					<div class="card-body" style="height: 200px; width: 200;">
+						<h4>Temperature</h4>
+						<p id="tempReading" class="card-text reading">not available</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col">
+				<div id="card1" class="card collapse show shadow-sm">
+					<div class="card-body" style="height: 200px; width: 200;">
+						<h4>Humidity</h4>
+						<p id="humidityReading" class="card-text reading">not available</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	
 	<hr>
 	<footer class="container">
 		<p style="text-align: center;">&copy; 2023 Team 27</p>
