--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 				<div class="collapse navbar-collapse" id="navbarCollapse">
 					<ul class="navbar-nav me-auto mb-2 mb-md-0">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Page 2</a>
+							<a class="nav-link" href="health.html">Health Data</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">About us</a>
