--- a/health.html
+++ b/health.html
@@ -4,13 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Dashboard</title>
+	<title>Health Data</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link href="./css/carousel.css" rel="stylesheet">
-	<link href="./css/index.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+	<!-- <link href="./css/index.css" rel="stylesheet"> -->
 
-	<script src="./index.js "></script>
+	<script src="./health.js "></script>
 </head>
 
 <body>
@@ -35,35 +36,20 @@
 			</div>
 		</nav>
 	</header>
-	<h1 class="mainHeading">Current Status</h1>
+	<h1 class="mainHeading">Health Data</h1>
 	<div>
 		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
-		<p id="lastRead">Last recorded temperature taken at: </p>
-
-		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
-			<div class="col">
-				<div id="card1" class="card collapse show shadow-sm">
-					<div class="card-body" style="height: 200px; width: 200;">
-						<h4>Temperature</h4>
-						<p id="tempReading" class="card-text reading">not available</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="col">
-				<div id="card1" class="card collapse show shadow-sm">
-					<div class="card-body" style="height: 200px; width: 200;">
-						<h4>Humidity</h4>
-						<p id="humidityReading" class="card-text reading">not available</p>
-					</div>
-				</div>
-			</div>
+		<p>Data for the last 24 hours </p>
+		<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+		<div id="healthImage">
+			<img id="displayedImage" src="" alt="Displayed Image" style="display: none;">
 		</div>
-	
-	<hr>
-	<footer class="container">
-		<p style="text-align: center;">&copy; 2023 Team 27</p>
-	</footer>
+
+
+		<hr>
+		<footer class="container">
+			<p style="text-align: center;">&copy; 2023 Team 27</p>
+		</footer>
 </body>
 
 </html>
