--- a/health.html
+++ b/health.html
@@ -9,7 +9,7 @@
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link href="./css/carousel.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-	<!-- <link href="./css/index.css" rel="stylesheet"> -->
+	<link href="./css/health.css" rel="stylesheet">
 
 	<script src="./health.js "></script>
 </head>
@@ -41,10 +41,45 @@
 		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
 		<p>Data for the last 24 hours </p>
 		<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-		<div id="healthImage">
-			<img id="displayedImage" src="" alt="Displayed Image" style="display: none;">
-		</div>
 
+		<div id="infoDiv" style="display: none;">
+			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+				<div id="humid" class="col">
+					<div id="card1" class="card collapse show shadow-sm">
+						<div>
+							<img id="humImage" src="" class="card-img-top" alt="temperature"></img>
+						</div>
+						<div class="card-body">
+							<h4 id="humType">Info</h4>
+							<p id="humDes" class="card-text reading"></p>
+						</div>
+					</div>
+				</div>
+			
+				<div id="temp" class="col">
+					<div id="card1" class="card collapse show shadow-sm">
+						<div>
+							<img id="tempImage" src="" class="card-img-top" alt="temperature"></img>
+						</div>
+						<div class="card-body">
+							<h4 id="tempType"></h4>
+							<p id="tempDes" class="card-text reading"></p>
+						</div>
+					</div>
+				</div>
+				<div id="comfort" class="col">
+					<div id="card1" class="card collapse show shadow-sm">
+						<div>
+							<img id="comfortImage" src="" class="card-img-top" alt="Comfortable"></img>
+						</div>
+						<div class="card-body">
+							<h4 id="comfortType"></h4>
+							<p id="comfortDes" class="card-text reading"></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<hr>
 		<footer class="container">
