minor updates and added python that I was running

--- a/health.html
+++ b/health.html
@@ -39,7 +39,7 @@
 	<h1 class="mainHeading">Health Data</h1>
 	<div>
 		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
-		<p>Data for the last 24 hours </p>
+		<p>Data for the last 24 hours. Click on a point for more info about that time. </p>
 		<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 
 		<div id="infoDiv" style="display: none;">
