add code to systematically add entries

--- a/health.html
+++ b/health.html
@@ -39,8 +39,8 @@
 	<h1 class="mainHeading">Health Data</h1>
 	<div>
 		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
-		<p>Data for the last 24 hours. Click on a point for more info about that time. </p>
-		<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+		<p>This shows past health data. Click on a point for more info about that time. </p>
+		<canvas id="myChart" style="width:100%;max-width:800px"></canvas>
 
 		<div id="infoDiv" style="display: none;">
 			<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
