--- a/health.html
+++ b/health.html
@@ -39,7 +39,7 @@
 	<h1 class="mainHeading">Health Data</h1>
 	<div>
 		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
-		<p>This shows past health data. Click on a point for more info about that time. </p>
+		<p>This shows the number of hours ago that the health data was collected. Click on a point for more info about that time. </p>
 		<canvas id="myChart" style="width:100%;max-width:800px"></canvas>
 
 		<div id="infoDiv" style="display: none;">
