--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 		</nav>
 	</header>
 	<h1 class="mainHeading">Current Status</h1>
-	<div>
+	<div class="statusDisplay">
 		<!-- <h3>This looks like a great way to start the midterm project</h3> -->
 		<p id="lastRead">Last recorded temperature taken at: </p>
 
 		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
-			<div class="col">
+			<div class="col tempDisplay">
 				<div id="card1Temp" class="card collapse show shadow-sm">
 					<div class="card-body" style="height: 200px; width: 200;">
 						<h4>Temperature</h4>
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 
-			<div class="col">
+			<div class="col humidityDisplay">
 				<div id="card2Hum" class="card collapse show shadow-sm">
 					<div class="card-body" style="height: 200px; width: 200;">
 						<h4>Humidity</h4>
@@ -66,9 +66,9 @@
 		</div>
 	</div>
 	<div>
-		<h3>Meet our plants</h3>
+		<h2 id="plantHeader">Meet our plants</h2>
 		<div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
-			<div class="col">
+			<div class="col" id="left-plant">
 				<div id="card1" class="card collapse show shadow-sm">
 					<div id="imgPlant1"></div>
 					<div class="card-body">
@@ -77,7 +77,7 @@
 				</div>
 				<button id="toggleCardButton1" type="button" class="btn btn-primary mb-2">Hide/Show</button>
 			</div>
-			<div class="col">
+			<div class="col" id="middle-plant">
 				<div id="card2" class="card collapse show shadow-sm">
 					<div id="imgPlant2"></div>
 					<div class="card-body">
@@ -86,7 +86,7 @@
 				</div>
 				<button id="toggleCardButton2" type="button" class="btn btn-primary mb-2">Hide/Show</button>
 			</div>
-			<div class="col">
+			<div class="col" id="right-plant">
 				<div id="card3" class="card collapse show shadow-sm">
 					<div id="imgPlant3"></div>
 					<div class="card-body">
@@ -104,3 +104,46 @@
 </body>
 
 </html>
+
+<style>
+	button {
+		margin-top: 5px;
+	}
+	.mainHeading {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.statusDisplay {
+		margin-bottom: 15px;
+	}
+	.tempDisplay {
+		text-align: center;
+		display: block;
+  		margin-left: auto;
+	}
+	.humidityDisplay {
+		text-align: center;
+		display: block;
+  		margin-right: auto;
+	}
+	#lastRead{
+		text-align: center;
+	}
+	#plantHeader{
+		text-align: center;
+		padding-top: 5rem;
+		padding-bottom: 2rem;
+	}
+	#left-plant {
+		margin-left: auto;
+		display: block;
+	}
+	#middle-plant {
+		display: block;
+
+	}
+	#right-plant {
+		margin-right: auto;
+		display: block;
+	}
+</style>
