centered warnings and added color to warning

--- a/health.html
+++ b/health.html
@@ -51,6 +51,7 @@
 						</div>
 						<div class="card-body">
 							<h4 id="humType">Info</h4>
+							<h5 id="humVal"></h5>
 							<p id="humDes" class="card-text reading"></p>
 						</div>
 					</div>
@@ -63,6 +64,7 @@
 						</div>
 						<div class="card-body">
 							<h4 id="tempType"></h4>
+							<h5 id="tempVal"></h5>
 							<p id="tempDes" class="card-text reading"></p>
 						</div>
 					</div>
@@ -90,6 +92,21 @@
 </html>
 <style>
 	.graph {
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+	#humid{ 
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+	#temp {
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+	#comfort {
 		margin-left: auto;
 		margin-right: auto;
 		display: block;
